ompi/mpi/f03/mpi.f03


integer(C_INT) function &
MPI_Cart_create(old_comm, ndims, dims, periods, reorder, comm_cart, ierr) &
  BIND(C, name="MPI_Cart_create")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: old_comm
  integer(INT_C), value, intent(in) :: ndims
  integer(INT_C), dimension(*), value, intent(in) :: dims
  integer(INT_C), dimension(*), value, intent(in) :: periods
  integer(INT_C), value, intent(in) :: reorder
  integer(MPI_HANDLE_KIND), value, intent(out) :: comm_cart
end function MPI_Cart_create

end interface MPI_Cart_create


interface MPI_Cart_get

integer(C_INT) function &
MPI_Cart_get(comm, maxdims, dims, periods, coords, ierr) &
  BIND(C, name="MPI_Cart_get")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(INT_C), value, intent(in) :: maxdims
  integer(INT_C), dimension(*), value, intent(out) :: dims
  integer(INT_C), dimension(*), value, intent(out) :: periods
  integer(INT_C), dimension(*), value, intent(out) :: coords
end function MPI_Cart_get

end interface MPI_Cart_get


interface MPI_Cart_map

integer(C_INT) function &
MPI_Cart_map(comm, ndims, dims, periods, newrank, ierr) &
  BIND(C, name="MPI_Cart_map")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(INT_C), value, intent(in) :: ndims
  integer(INT_C), dimension(*), value, intent(in) :: dims
  integer(INT_C), dimension(*), value, intent(in) :: periods
  integer(INT_C), value, intent(out) :: newrank
end function MPI_Cart_map

end interface MPI_Cart_map


interface MPI_Cart_rank

integer(C_INT) function &
MPI_Cart_rank(comm, coords, rank, ierr) &
  BIND(C, name="MPI_Cart_rank")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(INT_C), dimension(*), value, intent(in) :: coords
  integer(INT_C), value, intent(out) :: rank
end function MPI_Cart_rank

end interface MPI_Cart_rank


interface MPI_Cart_shift

integer(C_INT) function &
MPI_Cart_shift(comm, direction, disp, rank_source, rank_dest, ierr) &
  BIND(C, name="MPI_Cart_shift")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(INT_C), value, intent(in) :: direction
  integer(INT_C), value, intent(in) :: disp
  integer(INT_C), value, intent(out) :: rank_source
  integer(INT_C), value, intent(out) :: rank_dest
end function MPI_Cart_shift

end interface MPI_Cart_shift


interface MPI_Cart_sub

integer(C_INT) function &
MPI_Cart_sub(comm, remain_dims, new_comm, ierr) &
  BIND(C, name="MPI_Cart_sub")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer, dimension(*), value, intent(in) :: remain_dims
  integer(MPI_HANDLE_KIND), value, intent(out) :: new_comm
end function MPI_Cart_sub

end interface MPI_Cart_sub


interface MPI_Cartdim_get

integer(C_INT) function &
MPI_Cartdim_get(comm, ndims, ierr) &
  BIND(C, name="MPI_Cartdim_get")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(INT_C), value, intent(out) :: ndims
end function MPI_Cartdim_get

end interface MPI_Cartdim_get


interface MPI_Close_port

integer(C_INT) function &
MPI_Close_port(port_name, ierr) &
  BIND(C, name="MPI_Close_port")
  use MPI_C_BINDING
  character(len=*), value, intent(in) :: port_name
end function MPI_Close_port

end interface MPI_Close_port


interface MPI_Comm_accept

integer(C_INT) function &
MPI_Comm_accept(port_name, info, root, comm, newcomm, ierr) &
  BIND(C, name="MPI_Comm_accept")
  use MPI_C_BINDING
  character(len=*), value, intent(in) :: port_name
  integer(MPI_HANDLE_KIND), value, intent(in) :: info
  integer(INT_C), value, intent(in) :: root
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(MPI_HANDLE_KIND), value, intent(out) :: newcomm
end function MPI_Comm_accept

end interface MPI_Comm_accept


interface MPI_Comm_call_errhandler

integer(C_INT) function &
MPI_Comm_call_errhandler(comm, errorcode, ierr) &
  BIND(C, name="MPI_Comm_call_errhandler")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(INT_C), value, intent(in) :: errorcode
end function MPI_Comm_call_errhandler

end interface MPI_Comm_call_errhandler


interface MPI_Comm_compare

integer(C_INT) function &
MPI_Comm_compare(comm1, comm2, result, ierr) &
  BIND(C, name="MPI_Comm_compare")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm1
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm2
  integer(INT_C), value, intent(out) :: result
end function MPI_Comm_compare

end interface MPI_Comm_compare


interface MPI_Comm_connect

integer(C_INT) function &
MPI_Comm_connect(port_name, info, root, comm, newcomm, ierr) &
  BIND(C, name="MPI_Comm_connect")
  use MPI_C_BINDING
  character(len=*), value, intent(in) :: port_name
  integer(MPI_HANDLE_KIND), value, intent(in) :: info
  integer(INT_C), value, intent(in) :: root
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(MPI_HANDLE_KIND), value, intent(out) :: newcomm
end function MPI_Comm_connect

end interface MPI_Comm_connect


interface MPI_Comm_create

integer(C_INT) function &
MPI_Comm_create(comm, group, newcomm, ierr) &
  BIND(C, name="MPI_Comm_create")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(MPI_HANDLE_KIND), value, intent(in) :: group
  integer(MPI_HANDLE_KIND), value, intent(out) :: newcomm
end function MPI_Comm_create

end interface MPI_Comm_create


interface MPI_Comm_create_errhandler

integer(C_INT) function &
MPI_Comm_create_errhandler(function, errhandler, ierr) &
  BIND(C, name="MPI_Comm_create_errhandler")
  use MPI_C_BINDING
  external :: function
  integer(MPI_HANDLE_KIND), value, intent(out) :: errhandler
end function MPI_Comm_create_errhandler

end interface MPI_Comm_create_errhandler


interface MPI_Comm_create_keyval

integer(C_INT) function &
MPI_Comm_create_keyval(comm_copy_attr_fn, comm_delete_attr_fn, comm_keyval, extra_state, ierr) &
  BIND(C, name="MPI_Comm_create_keyval")
  use MPI_C_BINDING
  external :: comm_copy_attr_fn
  external :: comm_delete_attr_fn
  integer(INT_C), value, intent(out) :: comm_keyval
  integer(C_INT), value, intent(in) :: extra_state
end function MPI_Comm_create_keyval

end interface MPI_Comm_create_keyval


interface MPI_Comm_delete_attr

integer(C_INT) function &
MPI_Comm_delete_attr(comm, comm_keyval, ierr) &
  BIND(C, name="MPI_Comm_delete_attr")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: comm
  integer(INT_C), value, intent(in) :: comm_keyval
end function MPI_Comm_delete_attr

end interface MPI_Comm_delete_attr


interface MPI_Comm_disconnect

integer(C_INT) function &
MPI_Comm_disconnect(comm, ierr) &
  BIND(C, name="MPI_Comm_disconnect")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: comm
end function MPI_Comm_disconnect

end interface MPI_Comm_disconnect


interface MPI_Comm_dup

integer(C_INT) function &
MPI_Comm_dup(comm, newcomm, ierr) &
  BIND(C, name="MPI_Comm_dup")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(MPI_HANDLE_KIND), value, intent(out) :: newcomm
end function MPI_Comm_dup

end interface MPI_Comm_dup


interface MPI_Comm_free

integer(C_INT) function &
MPI_Comm_free(comm, ierr) &
  BIND(C, name="MPI_Comm_free")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: comm
end function MPI_Comm_free

end interface MPI_Comm_free


interface MPI_Comm_free_keyval

integer(C_INT) function &
MPI_Comm_free_keyval(comm_keyval, ierr) &
  BIND(C, name="MPI_Comm_free_keyval")
  use MPI_C_BINDING
  integer(INT_C), value, intent(inout) :: comm_keyval
end function MPI_Comm_free_keyval

end interface MPI_Comm_free_keyval


interface MPI_Comm_get_attr

integer(C_INT) function &
MPI_Comm_get_attr(comm, comm_keyval, attribute_val, flag, ierr) &
  BIND(C, name="MPI_Comm_get_attr")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(INT_C), value, intent(in) :: comm_keyval
  type(C_PTR), value, intent(out) :: attribute_val
  integer, value, intent(out) :: flag
end function MPI_Comm_get_attr

end interface MPI_Comm_get_attr


interface MPI_Comm_get_errhandler

integer(C_INT) function &
MPI_Comm_get_errhandler(comm, erhandler, ierr) &
  BIND(C, name="MPI_Comm_get_errhandler")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(MPI_HANDLE_KIND), value, intent(out) :: erhandler
end function MPI_Comm_get_errhandler

end interface MPI_Comm_get_errhandler


interface MPI_Comm_get_name

integer(C_INT) function &
MPI_Comm_get_name(comm, comm_name, resultlen, ierr) &
  BIND(C, name="MPI_Comm_get_name")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  character(len=*), value, intent(out) :: comm_name
  integer(INT_C), value, intent(out) :: resultlen
end function MPI_Comm_get_name

end interface MPI_Comm_get_name


interface MPI_Comm_get_parent

integer(C_INT) function &
MPI_Comm_get_parent(parent, ierr) &
  BIND(C, name="MPI_Comm_get_parent")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(out) :: parent
end function MPI_Comm_get_parent

end interface MPI_Comm_get_parent


interface MPI_Comm_group

integer(C_INT) function &
MPI_Comm_group(comm, group, ierr) &
  BIND(C, name="MPI_Comm_group")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(MPI_HANDLE_KIND), value, intent(out) :: group
end function MPI_Comm_group

end interface MPI_Comm_group


interface MPI_Comm_join

integer(C_INT) function &
MPI_Comm_join(fd, intercomm, ierr) &
  BIND(C, name="MPI_Comm_join")
  use MPI_C_BINDING
  integer(INT_C), value, intent(in) :: fd
  integer(MPI_HANDLE_KIND), value, intent(out) :: intercomm
end function MPI_Comm_join

end interface MPI_Comm_join


interface MPI_Comm_rank

integer(C_INT) function &
MPI_Comm_rank(comm, rank, ierr) &
  BIND(C, name="MPI_Comm_rank")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(INT_C), value, intent(out) :: rank
end function MPI_Comm_rank

end interface MPI_Comm_rank


interface MPI_Comm_remote_group

integer(C_INT) function &
MPI_Comm_remote_group(comm, group, ierr) &
  BIND(C, name="MPI_Comm_remote_group")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(MPI_HANDLE_KIND), value, intent(out) :: group
end function MPI_Comm_remote_group

end interface MPI_Comm_remote_group


interface MPI_Comm_remote_size

integer(C_INT) function &
MPI_Comm_remote_size(comm, size, ierr) &
  BIND(C, name="MPI_Comm_remote_size")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(INT_C), value, intent(out) :: size
end function MPI_Comm_remote_size

end interface MPI_Comm_remote_size


interface MPI_Comm_set_attr

integer(C_INT) function &
MPI_Comm_set_attr(comm, comm_keyval, attribute_val, ierr) &
  BIND(C, name="MPI_Comm_set_attr")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(INT_C), value, intent(in) :: comm_keyval
  type(C_PTR), value, intent(in) :: attribute_val
end function MPI_Comm_set_attr

end interface MPI_Comm_set_attr


interface MPI_Comm_set_errhandler

integer(C_INT) function &
MPI_Comm_set_errhandler(comm, errhandler, ierr) &
  BIND(C, name="MPI_Comm_set_errhandler")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: comm
  integer(MPI_HANDLE_KIND), value, intent(in) :: errhandler
end function MPI_Comm_set_errhandler

end interface MPI_Comm_set_errhandler


interface MPI_Comm_set_name

integer(C_INT) function &
MPI_Comm_set_name(comm, comm_name, ierr) &
  BIND(C, name="MPI_Comm_set_name")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: comm
  character(len=*), value, intent(in) :: comm_name
end function MPI_Comm_set_name

end interface MPI_Comm_set_name


interface MPI_Comm_size
